--- a/schedule.html
+++ b/schedule.html
@@ -1,109 +1,8 @@
 ---
 layout: default
-title: "Spring 2023 Course Schedule"
+title: "Current Semester Course Schedule"
 permalink: "/schedule/"
 ---
 
-<p class="lead">Email - the best way to reach me and set up a meeting.</p>
-<div class="table-responsive normal-text">
-    <table class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th>Time</th>
-                <th>M</th>
-                <th>T</th>
-                <th>W</th>
-                <th>R</th>
-                <th>F</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th>08:30 - 09:30</th>
-                <td></td>
-                <td class="custom-table course3">Capstone I<br>Boyer 328</td>
-                <td class="custom-table course3">Ind Study I<br>Boyer 328</td>
-                <td class="custom-table course3">Capstone V<br>Boyer 328</td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>09:45 - 10:50</th>
-                <td class="custom-table course1">CS 262.1<br>Boyer 8</td>
-                <td class="custom-table course3">Capstone II<br>Boyer 328</td>
-                <td class="custom-table course1">CS 262.1<br>Boyer 8</td>
-                <td class="custom-table course3">Ind Study II<br>Boyer 328</td>
-                <td class="custom-table course1">CS 262.1<br>Boyer 8</td>
-            </tr>
-            <tr>
-                <th>11:00 - 12:05</th>
-                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
-                <td></td>
-                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
-                <td></td>
-                <td class="custom-table course2">CS 358.1<br>Boyer 14</td>
-            </tr>
-            <tr>
-                <th>12:05 - 01:00</th>
-                <td class="custom-table RandD">Lunch</td>
-                <td rowspan="2" class="custom-table other">Dept Meeting</td>
-                <td class="custom-table RandD">Lunch</td>
-                <td class="custom-table RandD">Lunch</td>
-                <td class="custom-table RandD">Lunch</td>
-            </tr>
-            <tr>
-                <th>01:00 - 02:00</th>
-                <td class="custom-table course3">Capstone III<br>Boyer 328</td>
-                <td class="custom-table course3">Capstone IV<br>Boyer 328</td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>03:00 - 04:00</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>04:00 - 05:00</th>
-                <td class="custom-table RandD">R & D</td>
-                <td rowspan="2" class="custom-table other">Senate</td>
-                <td class="custom-table RandD">R & D</td>
-                <td class="custom-table RandD">R & D</td>
-                <td class="custom-table RandD">R & D</td>
-            </tr>
-            <tr>
-                <th>05:00 - 06:00</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>06:00 - 07:00</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>07:00 - 08:00</th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th>08:00 - 09:00</th>
-                <td class="custom-table other">NCL team<br>prep</td>
-                <td class="custom-table RandD">WiCyS</td>
-                <td class="custom-table other">Coding team<br>prep</td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+<p class="lead">My schedule tends to be in an unstable version.</p>
+<p class="lead">So, email/discord - the best way to reach me and set up a meeting :)</p>
