--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@ alt_text: "Profile picture"
 ---
 
 <p style="padding-top: 20px;">My name is Vitaly Ford. I am an Associate Professor at Arcadia University, Computer Science and Mathematics Department (<a href="https://www.arcadia.edu/profile/vitaly-ford" target="_blank" rel="noopener norefferer">profile link</a>). I teach Computer Architecture, Data Structures and Algorithms, Operating Systems, Network Security, Introduction to Practical Security Assessment (aka pentesting), and Capstone courses.</p>
-<p>Also, I served as the Director of Cybersecurity Research and Development at the <a href="https://cyberstudents.org/" target="_blank" rel="noopener norefferer">National Cybersecurity Student Association</a> and currently serve as the Student Chapter Coordinator for the <a href="https://www.wicys.org/" target="_blank" rel="noopener norefferer">Women in Cybersecurity organization</a>.</p>
-<hr>
-<p>In the summer of 2023, I co-founded Citodex Technology Ltd., as its CTO. We are developing an AI SaaS product for the specialty insurance sector to automate the processing and management of documents (policies, submissions, etc.).</p>
+<p>Also, I served as the Director of Cybersecurity Research and Development at the <a href="https://cyberstudents.org/" target="_blank" rel="noopener norefferer">National Cybersecurity Student Association</a> and currently serve as the Global Student Chapter Coordinator for the <a href="https://www.wicys.org/" target="_blank" rel="noopener norefferer">Women in Cybersecurity organization</a>.</p>
 <hr>
 <p>In my spare time, I enjoy playing table tennis and chess as well as participating in Capture the Flag competitions and coaching student cybersecurity and programming teams.</p>
 <hr>
